cool new changes

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -25,3 +25,7 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
 #messages li { padding: 5px 10px; }
 
 #messages li:nth-child(odd) { background: #eee; }
+
+ul {
+  margin-bottom: 39px;
+}
